* add two styles for buttons aligned to the left or that are centered   (Bug #8969)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/trunk/ucs@12640 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/management/univention-webui-style/style/stylesheet.css
+++ b/management/univention-webui-style/style/stylesheet.css
@@ -204,6 +204,14 @@ table.button{
 float:left;
 }
 
+table.button_right{
+float:right;
+}
+
+table.button_center{
+float:center;
+}
+
 table.multi{
 border-spacing:0px !important;
 border-collapse:collapse;
